--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,8 @@ add_executable(httpd
         HttpdServer.cc HttpdServer.hpp
         HTTPRequest.cc HTTPRequest.hpp
         HTTPResponse.cc HTTPResponse.hpp
-        HTTPHandler.cc HTTPHandler.hpp)
+        HTTPHandler.cc HTTPHandler.hpp
+        ThreadPool.cc ThreadPool.hpp)
 target_compile_options(httpd PRIVATE -Wall -Wextra -pedantic -Werror -Wnon-virtual-dtor)
 target_include_directories(httpd PRIVATE ../dependencies/include)
 target_link_libraries(httpd PRIVATE Threads::Threads)
